force-app/main/default/objects/Link__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toolbox</fullName>
                <default>true</default>
                <label>Toolbox</label>
            </value>
            <value>
                <fullName>Company Links</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>