force-app/main/default/objects/Link__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <inlineHelpText>Icon name from Lightning Design System -&gt; https://www.lightningdesignsystem.com/icons/</inlineHelpText>
    <label>Icon</label>
    <length>20</length>
    <type>Text</type>
</CustomField>