force-app/main/default/objects/Link__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK( URL__c , Name )</formula>
    <label>Link</label>
    <type>Text</type>
</CustomField>