force-app/main/default/objects/Link__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>